Improved header responsiveness and fixed whitespace

--- a/development/css/styles.scss
+++ b/development/css/styles.scss
@@ -55,25 +55,48 @@ nav {
 
 header {
 	background-image: url("../images/flaga.jpg");
-	background-size: 100%;
+	background-size: 110%;
 	background-repeat: no-repeat;
 	font-size: 1.2em;
 	color: $blue;
-	padding-top: 80px;
+	padding-top: 70px;
 	text-align: center;
 
 	h1 {
 		font-family: $serif;
+		padding-bottom: 0;
+		margin-bottom: .2em;
 	}
 
 	h2 {
 		font-family: $sans;
 		font-style: italic;
+		padding-top: 0;
+		margin: 0;
 	}
 
 	img {
 		float: left;
 		height: 12em;
+	}
+
+	@media(max-width: 650px) {
+		background-size: 250%;
+		font-size: 1em;
+		padding-top: 50px;
+		position: relative;
+		.heading-wrapper {
+			padding-top: 0;
+			margin-bottom: -1em;
+		}
+		img {
+			height: 5em;
+			float: none;
+			position: absolute;
+			// bottom: -1.5em;
+			top: 0;
+			left: 0;
+		}
 	}
 
 	//header nav
@@ -101,7 +124,7 @@ header {
 
 				a {
 					margin: 0 0 2px 0;
-					// margin: 0;
+					margin: 0;
 					font-size: .7em;
 					display: block;
 					color: #ffffff;
@@ -111,7 +134,7 @@ header {
 
 					span {
 						display: block;
-						padding: 6px 10px;
+						padding: 8px 10px;
 						font-weight: bold;
 					}
 				}
@@ -184,7 +207,7 @@ header {
 		  content: '';
 		}
 
-		@media(max-width: 480px) {
+		@media(max-width: 650px) {
 			ul {
 				max-height: 32px;
 				overflow: hidden;
@@ -195,6 +218,8 @@ header {
 					border-right: 0 none;
 					float: none;
 					width: 100%;
+					margin-top: 4px;
+
 				}
 
 				li.mobile {
@@ -204,6 +229,12 @@ header {
 					i {
 						float: right;
 						margin-right: 5px;
+						color: #FFF;
+						transition: color .25s ease;
+					}
+
+					i:hover {
+						color: $blue;
 					}
 				}
 
@@ -222,28 +253,12 @@ header {
 		}
 	} //end header nav
 
-	@media(max-width: 480px) {
+	@media(max-width: 650px) {
 		.menu.expand ul {
 				max-height: 900px;
 			}
 	}
 
-	@media(max-width: 700px) {
-		padding-top: 60px;
-		font-size: 1em;
-
-		h1 {
-			margin-bottom: 0;
-		}
-
-		h2 {
-			margin-top: 5px;
-		}
-
-		img {
-			height: 10em;
-		}
-	}
 } //end header
 
 .social {
